force-app/main/default/objects/DD_Quote_Benefit_Override__c/DD_Quote_Benefit_Override__c.object-meta.xml
<CustomObject>
    <description>CDT-level overrides for mid/large groups (Phase 3). Enables per-procedure customization without modifying master.</description>
    <label>Quote Benefit Override</label>
    <nameField><displayFormat>QBO-{000000}</displayFormat><label>Override ID</label><type>AutoNumber</type></nameField>
    <pluralLabel>Quote Benefit Overrides</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>