force-app/main/default/objects/DD_Quote_Benefit_Override__c/fields/Benefit_Spec__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Spec__c</fullName>
    <label>Benefit Spec</label>
    <type>Lookup</type>
    <referenceTo>DD_Benefit_Spec__c</referenceTo><relationshipLabel>Quote Overrides</relationshipLabel><relationshipName>Quote_Overrides</relationshipName><required>true</required>
    <description>Master CDT benefit spec</description>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>