force-app/main/default/objects/DD_Quote_Benefit_Override__c/fields/Override_Frequency_Limit__c.field-meta.xml
<CustomField>
    <fullName>Override_Frequency_Limit__c</fullName>
    <label>Override Frequency Limit</label>
    <type>Number</type>
    <precision>4</precision><scale>0</scale><required>false</required><unique>false</unique><externalId>false</externalId>
    <description>Null = inherit from master</description>
</CustomField>