force-app/main/default/objects/DD_Quote_Benefit_Override__c/fields/Override_Frequency_Period__c.field-meta.xml
<CustomField>
    <fullName>Override_Frequency_Period__c</fullName>
    <label>Override Frequency Period</label>
    <type>Picklist</type>
<valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Per Calendar Year</fullName><default>false</default><label>Per Calendar Year</label></value><value><fullName>Per 6 Months</fullName><default>false</default><label>Per 6 Months</label></value><value><fullName>Per 12 Months</fullName><default>false</default><label>Per 12 Months</label></value><value><fullName>Per 24 Months</fullName><default>false</default><label>Per 24 Months</label></value><value><fullName>Per 36 Months</fullName><default>false</default><label>Per 36 Months</label></value><value><fullName>Per 60 Months</fullName><default>false</default><label>Per 60 Months</label></value><value><fullName>Per Lifetime</fullName><default>false</default><label>Per Lifetime</label></value></valueSetDefinition></valueSet>
    <description>Null = inherit</description>
</CustomField>