force-app/main/default/objects/DD_Quote_Benefit_Override__c/fields/Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Override_Reason__c</fullName>
    <label>Override Reason</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Audit trail for why override was made</description>
</CustomField>