force-app/main/default/objects/DD_Quote_Benefit_Override__c/fields/Quote_Plan_Config__c.field-meta.xml
<CustomField>
    <fullName>Quote_Plan_Config__c</fullName>
    <label>Quote Plan Config</label>
    <type>Lookup</type>
    <referenceTo>DD_Quote_Plan_Config__c</referenceTo><relationshipLabel>Benefit Overrides</relationshipLabel><relationshipName>Benefit_Overrides</relationshipName><required>true</required>
    <description>Parent quote plan config</description>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>